fix conflicts and errors
